# mtg-stock-app

./: .gitignore  CMakeLists.txt  Phoenix Copy deck.txt  README.md  run.sh
backend/: CMakeLists.txt  Cargo.toml  httpRequest.py
backend/src/: CMakeLists.txt  lib.rs
src/: Deck - Dimir Murktide.txt  application.cpp  application.hpp  main.cpp  user.cpp  user.hpp  window.cpp  window.hpp
